--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: monospace, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -14,17 +14,11 @@
   -webkit-text-size-adjust: 100%;
 }
 
-#root {
-  width: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+@font-face {
+  font-family: 'Freehand';
+  src: url('./fonts/Freehand-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
 }
 
 body {
@@ -35,39 +29,51 @@ body {
   min-height: 100vh;
 }
 
+#root {
+  width: 100%;
+}
+
+section,
+.full-size {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  align-items: center;
+  justify-content: center;
+}
+
+.neon-text {
+  font-size: 35px;
+  color: #f9f3fb;
+  font-family: "Freehand", cursive;
+ /*  animation: heartbeat 1s infinite; */
+ text-shadow:
+      0 0 4px #f9f3fb,
+      0 0 11px #f9f3fb,
+      0 0 19px #f9f3fb,
+      0 0 40px rgb(255, 0, 179),
+      0 0 80px rgb(255, 0, 179),
+      0 0 120px rgb(255, 0, 179),
+      0 0 150px rgb(255, 0, 179),
+      0 0 300px rgb(255, 0, 179);
+}
+
+#bottom-section {
+  position: absolute;
+  text-align: center;
+  bottom: 0;
+}
+
+#top-section {
+  position: absolute;
+  text-align: center;
+  top: 0;
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
