--- a/src/sections/banner/banner.css
+++ b/src/sections/banner/banner.css
@@ -1,47 +1,23 @@
 #banner {
   width: 100%;
   height: 100vh;
-  background-image: url("../../assets/quiDoveBattono.jpg");
+  background-image: radial-gradient(
+      ellipse at center,
+      rgba(0, 0, 0, 0) 0%,
+      rgba(0, 0, 0, 0.4) 20%,
+      rgba(0, 0, 0, 1) 80%
+    ),
+    url("src/assets/antoMultitask.jpg");
   background-size: cover;
   background-position: center 35%;
+  justify-content: center;
 }
 
-section,
-.full-size {
-  display: flex;
-  width: 100%;
-  min-height: 100vh;
-  margin: 0;
-  padding: 0;
+#logo-img {
+  max-width: 300px;
 }
 
-#heartbeat-gradient {
-  background: radial-gradient(
-    ellipse at center,
-    rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 0.4) 20%,
-    rgba(0, 0, 0, 1) 80%
-  );
-  background-position: center;
-  animation: heartbeat 1s infinite ease-in-out;
-  background-size: 100% 100%;
-}
-
-@keyframes heartbeat {
-  0%,
-  100% {
-    background-size: 100% 100%;
-  }
-  20% {
-    background-size: 150% 150%;
-  }
-  40% {
-    background-size: 100% 100%;
-  }
-  60% {
-    background-size: 150% 150%;
-  }
-  80% {
-    background-size: 100% 100%;
-  }
+#scroll-icon {
+  font-size: 30px;
+  margin-bottom: 20px;
 }
