--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,12 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: rgba(255, 255, 255, 1);
   background-color: #242424;
+  --color-primary: #157aa6;
+  --color-primary-light: #a8dcea;
+  --color-secondary: #cf4730;
+  --color-tertiary: #ff00b5;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -49,28 +52,15 @@ section,
   font-size: 35px;
   color: #f9f3fb;
   font-family: "Freehand", cursive;
- /*  animation: heartbeat 1s infinite; */
  text-shadow:
       0 0 4px #f9f3fb,
       0 0 11px #f9f3fb,
       0 0 19px #f9f3fb,
-      0 0 40px rgb(255, 0, 179),
-      0 0 80px rgb(255, 0, 179),
-      0 0 120px rgb(255, 0, 179),
-      0 0 150px rgb(255, 0, 179),
-      0 0 300px rgb(255, 0, 179);
-}
-
-#bottom-section {
-  position: absolute;
-  text-align: center;
-  bottom: 0;
-}
-
-#top-section {
-  position: absolute;
-  text-align: center;
-  top: 0;
+      0 0 40px var(--color-tertiary),
+      0 0 80px var(--color-tertiary),
+      0 0 120px var(--color-tertiary),
+      0 0 150px var(--color-tertiary),
+      0 0 300px var(--color-tertiary);
 }
 
 h1 {
