--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,7 @@ body {
 
 #root {
   width: 100%;
+  overflow-x: hidden;
 }
 
 section,
@@ -63,6 +64,11 @@ section,
   color: #f9f3fb;
   font-family: "Freehand", cursive;
   text-shadow: var(--neon-shadow);
+}
+
+
+.scroll-icon {
+  font-size: 30px;
 }
 
 h1 {
