-webkit-fill-available css value change to 100%

--- a/src/sections/banner/banner.css
+++ b/src/sections/banner/banner.css
@@ -19,7 +19,7 @@
 
 #bottom-section {
   position: absolute;
-  width: -webkit-fill-available;
+  width: 100%;
   text-align: center;
   bottom: 0;
   background: radial-gradient(
