--- a/src/index.css
+++ b/src/index.css
@@ -52,13 +52,14 @@ section,
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
   align-items: center;
   justify-content: center;
 }
 
+h2,
 .neon-text {
   font-size: 35px;
   color: #f9f3fb;
@@ -69,9 +70,164 @@ section,
 
 .scroll-icon {
   font-size: 30px;
+  margin: 20px
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+#banner {
+  width: 100%;
+  height: 100vh;
+  background-image: radial-gradient(
+      ellipse at center,
+      rgba(0, 0, 0, 0) 0%,
+      rgba(0, 0, 0, 0.4) 20%,
+      rgba(0, 0, 0, 1) 80%
+    ),
+    url("src/assets/people/antoMultitask.jpg");
+  background-size: cover;
+  background-position: center 35%;
+  justify-content: center;
+}
+
+#logo-img {
+  max-width: 300px;
+}
+
+#bottom-section {
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  bottom: 0;
+  background: radial-gradient(
+    ellipse at 50% 200%,
+    var(--color-tertiary) 0%,
+    transparent 60%
+  );
+  background-size: 200% 120%;
+  background-position: top;
+  animation: heartbeat 1s infinite;
+}
+
+@keyframes heartbeat {
+  0%, 100% {
+    background-size: 200% 120%;
+  }
+  20% {
+    background-size: 200% 100%;
+  }
+  40% {
+    background-size: 200% 120%;
+  }
+  60% {
+    background-size: 200% 100%;
+  }
+  80% {
+    background-size: 200% 120%;
+  }
+}
+
+#top-buttons-container {
+  display: flex;
+  width: 100%;
+  position: fixed;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 999;
+}
+
+.icon-button {
+  display: flex;
+  width: 60px;
+  height: 60px;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  color: white;
+  cursor: pointer;
+}
+
+.icon-button svg {
+  box-shadow: var(--neon-shadow);
+}
+
+#whatsapp-icon {
+  border-radius: 50%;
+}
+
+#instagram-icon {
+  border-radius: 8px;
+}
+
+#menu {
+  background: var(--color-primary);
+}
+
+.content-container {
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--color-primary);
+  box-shadow: 0 0 10px -5px black;
+}
+
+.carousel-container {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.carousel-track {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  width: 100%;
+  animation: carousel-scroll 10s linear infinite;
+}
+
+@keyframes carousel-scroll {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-50%);
+  }
+}
+
+.side-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  justify-self: flex-end;
+  align-items: center;
+  gap: 20px;
+  background-color: var(--color-primary-light);
+  color: var(--color-secondary);
+}
+
+a.side-section {
+  text-decoration: none;
+  padding: 0 0 20px 0;
+}
+
+.vertical-line {
+  background-color: var(--color-secondary);
+  width: 3px;
+  height: 100%;
+}
+
+#right-icon {
+  font-size: 30px;
+}
+
+.menu-link-title {
+  writing-mode: vertical-rl;
+  text-orientation: mixed;
+  white-space: nowrap;
 }
