--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   --color-secondary: #cf4730;
   --color-tertiary: #ff009d;
 
-  color: var(--color-secondary);
+  color: white;
   background-color: var(--color-primary-light);
 
   --neon-shadow: 0 0 4px #f9f3fb, 0 0 11px #f9f3fb, 0 0 19px #f9f3fb,
@@ -143,7 +143,7 @@ h1 {
   position: fixed;
   justify-content: space-between;
   align-items: center;
-  z-index: 999;
+  z-index: 998;
 }
 
 .icon-button {
@@ -261,4 +261,22 @@ h3 {
   background-position: center;
   align-items: center;
   justify-content: center;
+}
+
+.dialog-container {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  z-index: 999;
+  background-color: var(--color-primary);
+}
+
+.dialog-nav {
+  display: flex;
+  align-items: center;
+  font-size: 30px;
+  padding: 8px;
 }
