--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,11 @@ section,
   justify-content: center;
 }
 
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
+
 h2,
 .neon-text {
   font-size: 35px;
@@ -74,14 +79,26 @@ h2,
   text-shadow: var(--neon-shadow);
 }
 
+h3 {
+  color: white;
+  font-family: "Oswald", sans-serif;
+  font-size: 30px;
+}
+
+.dialog-content h3 {
+  margin-bottom: 0;
+}
+
+h4 {
+  color: white;
+  font-family: "Oswald", sans-serif;
+  font-size: 20px;
+  margin-bottom: 0;
+}
+
 .scroll-icon {
   font-size: 30px;
   margin: 20px;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
 }
 
 #banner {
@@ -237,12 +254,6 @@ a.side-section {
   white-space: nowrap;
 }
 
-h3 {
-  color: white;
-  font-family: "Oswald", sans-serif;
-  font-size: 30px;
-}
-
 .menu-cards-container {
   display: flex;
   flex-direction: column;
@@ -277,4 +288,18 @@ h3 {
   align-items: center;
   font-size: 30px;
   padding: 8px;
+}
+
+.dialog-content {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  overflow-y: scroll;
+  box-shadow: inset 0px 10px 15px -10px black;
+}
+
+.menu-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
