--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   --color-tertiary: #ff009d;
 
   color: white;
-  background-color: var(--color-primary-light);
+  background-color: var(--color-primary);
 
   --neon-shadow: 0 0 4px #f9f3fb, 0 0 11px #f9f3fb, 0 0 19px #f9f3fb,
     0 0 40px var(--color-tertiary), 0 0 80px var(--color-tertiary),
@@ -46,7 +46,6 @@ body {
   padding: 0;
   min-height: 100vh;
 }
-
 
 section,
 .full-size {
@@ -183,10 +182,6 @@ h4 {
   border-radius: 8px;
 }
 
-#menu {
-  background: var(--color-primary);
-}
-
 #menu h2 {
   font-size: 45px;
 }
@@ -259,10 +254,7 @@ a.side-section {
 
 .menu-cards-container {
   display: grid;
-  grid-template-columns: repeat(
-    auto-fill,
-    minmax(360px, 1fr)
-  ); 
+  grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
   width: 100%;
   gap: 12px;
 }
@@ -315,6 +307,34 @@ a.side-section {
   margin-top: 25px;
 }
 
-div.menu-row p, h4 {
+div.menu-row p,
+h4 {
   margin: 0;
+}
+
+footer {
+  padding: 20px 30px;
+}
+
+footer h4 {
+  font-size: 16px;
+  margin-top: 20px;
+}
+
+footer a {
+  color: white;
+  font-size: 12px;
+}
+
+footer ul {
+  margin-top: 5px;
+  list-style-type: none;
+  padding-inline-start: 20px;
+}
+
+.center-text {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  font-size: 10px;
 }
