--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@
 body {
   margin: 0;
   padding: 0;
-  min-height: 100vh;
+  min-height: 100svh;
 }
 
 section,
@@ -96,7 +96,7 @@ h4 {
 
 #banner {
   width: 100%;
-  height: 100vh;
+  height: 100svh;
   background-image: radial-gradient(
       ellipse at center,
       rgba(0, 0, 0, 0) 0%,
@@ -189,7 +189,7 @@ h4 {
 .content-container {
   display: flex;
   width: 100%;
-  height: 100vh;
+  height: 100svh;
   background-color: var(--color-primary);
   box-shadow: 0 0 10px -5px black;
 }
@@ -279,7 +279,7 @@ a.side-section {
   flex-direction: column;
   position: fixed;
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   top: 0;
   z-index: 999;
   background-color: var(--color-primary);
