--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,7 @@
 }
 
 body {
+  width: 100%;
   margin: 0;
   padding: 0;
 }
@@ -109,6 +110,9 @@ h4 {
 @media only screen and (min-width: 768px) {
   #banner {
     background-size: cover;
+  }
+  #logo-banner {
+    max-width: 280px;
   }
 }
 
@@ -290,16 +294,31 @@ a.side-section {
   box-shadow: inset 0px 10px 15px -10px black;
 }
 
+.dialog-content span{
+  display: flex;
+  width: 100%;
+  max-width: 800px;
+  align-self: center;
+}
+
 .menu-row {
   display: flex;
+  width: 100%;
   justify-content: space-between;
-  align-items: center;
+  align-items: baseline;
   margin-top: 25px;
+  gap: 12px;
+  max-width: 800px;
+  align-self: center;
 }
 
 div.menu-row p,
 h4 {
   margin: 0;
+}
+
+div.menu-row p {
+  white-space: nowrap;
 }
 
 footer {
