--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,6 @@ body {
 section {
   display: flex;
   flex-direction: column;
-  width: 100%;
   align-items: center;
   justify-content: center;
 }
@@ -61,7 +60,7 @@ h1 {
 }
 
 h2 {
-  font-size: 35px;
+  font-size: 45px;
   color: white;
   font-family: "Freehand", cursive;
 }
@@ -72,15 +71,15 @@ h3 {
   font-size: 30px;
 }
 
-.dialog-content h3 {
-  margin-bottom: 0;
-}
-
 h4 {
   color: white;
   font-family: "Oswald", sans-serif;
   font-size: 20px;
   margin-bottom: 0;
+}
+
+a {
+  text-decoration: none;
 }
 
 .neon-text {
@@ -125,7 +124,7 @@ h4 {
   text-align: center;
   background: radial-gradient(
     ellipse at 50% 200%,
-    var(--color-tertiary) 0%,
+    var(--color-primary) 0%,
     transparent 60%
   );
   background-size: 200% 120%;
@@ -174,18 +173,6 @@ nav {
 
 #banner h2 {
   font-size: 25px;
-}
-
-#menu h2 {
-  font-size: 45px;
-}
-
-.content-container {
-  display: flex;
-  width: 100%;
-  height: 100svh;
-  background-color: var(--color-primary);
-  box-shadow: 0 0 10px -5px black;
 }
 
 .carousel-container {
@@ -294,11 +281,15 @@ a.side-section {
   box-shadow: inset 0px 10px 15px -10px black;
 }
 
-.dialog-content span{
+.dialog-content span {
   display: flex;
   width: 100%;
   max-width: 800px;
   align-self: center;
+}
+
+.dialog-content h3 {
+  margin-bottom: 0;
 }
 
 .menu-row {
@@ -319,6 +310,56 @@ h4 {
 
 div.menu-row p {
   white-space: nowrap;
+}
+
+#find-us {
+  padding: 20px;
+}
+
+#find-us .content-container {
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto auto auto;
+  gap: 0
+}
+
+.img-acitrezza {
+  grid-column: 1;
+  grid-row: 1;
+  width: 100%;
+}
+
+.txt-acitrezza {
+  grid-column: 1;
+  grid-row: 2;
+}
+
+.maps-frame {
+  width: 100%;
+  height: 100%;
+  grid-column: 1;
+  grid-row: 3;
+}
+
+@media only screen and (min-width: 780px) {
+  #find-us .content-container {
+    display: grid;
+    grid-template-columns: 70% auto;
+    grid-template-rows: 40% auto;
+    gap: 40px
+  }
+  .img-acitrezza {
+    grid-column: 1;
+    grid-row: 1/3;
+  }
+  .txt-acitrezza {
+    grid-column: 2;
+    grid-row: 1;
+  }
+  .maps-frame {
+    grid-column: 2;
+    grid-row: 2;
+  }
 }
 
 footer {
