--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,7 @@ body {
 }
 
 section {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -218,6 +219,7 @@ a.side-section {
   grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
   width: 100%;
   gap: 12px;
+  padding-bottom: 12px;
 }
 
 .menu-card {
@@ -293,13 +295,20 @@ div.menu-row p {
 }
 
 #about-us {
-  margin-top: 20px;
+  height: 110svh;
   padding: 20px;
-  height: 100svh;
 }
 
 #about-us p {
   max-width: 700px;
+  text-align: center;
+}
+
+.about-us-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px 10px;
 }
 
 .carousel-container {
@@ -329,48 +338,65 @@ div.menu-row p {
 }
 
 .carousel-track img {
-  height: 100svh;
+  height: 110svh;
 }
 
 #find-us {
-  padding: 20px;
+  padding: 0 20px;
 }
 
 #find-us .content-container {
   display: grid;
   grid-template-columns: auto;
-  grid-template-rows: auto auto auto;
+  grid-template-rows: 1fr 0.5fr;
   gap: 0;
 }
 
 .img-acitrezza {
-  grid-column: 1;
-  grid-row: 1;
+  display: flex;
   width: 100%;
+  background-image: url("https://siviaggia.it/wp-content/uploads/sites/2/2019/08/aci-trezza.jpg");
+  background-position: center;
+  background-size: cover;
+  box-shadow: 0 0 50px -20px black;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 140px;
+  z-index: -1;
+  filter: brightness(0.5)
 }
 
 .txt-acitrezza {
+  display: flex;
   grid-column: 1;
-  grid-row: 2;
+  grid-row: 1;
 }
 
 .maps-frame {
+  display: flex;
   width: 100%;
   height: 100%;
   grid-column: 1;
-  grid-row: 3;
+  grid-row: 2;
 }
 
 @media only screen and (min-width: 780px) {
   #find-us .content-container {
     display: grid;
     grid-template-columns: 70% auto;
-    grid-template-rows: 40% auto;
+    grid-template-rows: 70% auto;
     gap: 40px;
   }
   .img-acitrezza {
+    position: relative;
     grid-column: 1;
     grid-row: 1/3;
+    top: 0;
+    left: 0;
+    height: 100%;
+    z-index: -1;
+    filter: none;
   }
   .txt-acitrezza {
     grid-column: 2;
