--- a/src/index.css
+++ b/src/index.css
@@ -129,33 +129,6 @@ a {
 #bottom-section {
   width: 100%;
   text-align: center;
-  background: radial-gradient(
-    ellipse at 50% 200%,
-    var(--color-primary) 0%,
-    transparent 60%
-  );
-  background-size: 200% 120%;
-  background-position: top;
-  animation: heartbeat 1s infinite;
-}
-
-@keyframes heartbeat {
-  0%,
-  100% {
-    background-size: 200% 120%;
-  }
-  20% {
-    background-size: 200% 100%;
-  }
-  40% {
-    background-size: 200% 120%;
-  }
-  60% {
-    background-size: 200% 100%;
-  }
-  80% {
-    background-size: 200% 120%;
-  }
 }
 
 nav {
@@ -364,7 +337,7 @@ div.menu-row p {
   left: 0;
   height: 140px;
   z-index: -1;
-  filter: brightness(0.5)
+  filter: brightness(0.5);
 }
 
 .txt-acitrezza {
@@ -405,6 +378,44 @@ div.menu-row p {
   .maps-frame {
     grid-column: 2;
     grid-row: 2;
+  }
+}
+
+#loading-page {
+  display: flex;
+  width: 100%;
+  height: 100lvh;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo-spinner {
+  width: 200px;
+  height: 200px;
+  background-image: url("/assets/logotipoWhite.png");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  animation: heartbeat 1s infinite;
+}
+
+@keyframes heartbeat {
+  0%,
+  100% {
+    background-size: 100% 100%;
+  }
+  20% {
+    background-size: 80% 80%;
+  }
+  40% {
+    background-size: 100% 100%;
+  }
+  60% {
+    background-size: 80% 80%;
+  }
+  80% {
+    background-size: 100% 100%;
   }
 }
 
