--- a/src/index.css
+++ b/src/index.css
@@ -189,10 +189,16 @@ a.side-section {
 
 .menu-cards-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
+  grid-template-columns: auto;
   width: 100%;
   gap: 12px;
   padding-bottom: 12px;
+}
+
+@media only screen and (min-width: 768px) {
+  .menu-cards-container {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
 
 .menu-card {
@@ -322,7 +328,8 @@ div.menu-row p {
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: 1fr 0.5fr;
-  gap: 0;
+  gap: 20px;
+  padding: 20px 0;
 }
 
 .img-acitrezza {
@@ -344,6 +351,7 @@ div.menu-row p {
   display: flex;
   grid-column: 1;
   grid-row: 1;
+  text-align: center;
 }
 
 .maps-frame {
@@ -374,6 +382,7 @@ div.menu-row p {
   .txt-acitrezza {
     grid-column: 2;
     grid-row: 1;
+    text-align: left;
   }
   .maps-frame {
     grid-column: 2;
