--- a/src/index.css
+++ b/src/index.css
@@ -432,20 +432,39 @@ footer {
   padding: 20px 30px;
 }
 
-footer h4 {
+.footer-container {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 1.3fr 1fr 1fr;
+  column-gap: 12px;
+  margin: auto;
+  width: min-content;
+}
+
+footer .logo-container {
+  grid-area: 1 / 1 / 4 / 1;
+  width: 100px;
+  height: 100px;
+  background-image: url("/assets/logotipoWhite.png");
+  background-position: center;
+  background-size: cover;
+}
+
+footer .contact-title {
+  grid-area: 1 / 2 / 1 / 2;
   font-size: 16px;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 footer a {
   color: white;
   font-size: 12px;
+  margin-left: 8px;
 }
 
-footer ul {
-  margin-top: 5px;
-  list-style-type: none;
-  padding-inline-start: 20px;
+footer .contact-item {
+  display: flex;
+  align-items: center;
 }
 
 .center-text {
