--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
   --color-tertiary: #ff009d;
 
   color: white;
+  background-color: var(--color-primary);
 
   --neon-shadow: 0 0 4px white, 0 0 11px white, 0 0 19px white,
     0 0 40px var(--color-tertiary), 0 0 80px var(--color-tertiary),
@@ -235,6 +236,7 @@ a.side-section {
   flex-direction: column;
   position: fixed;
   width: 100%;
+  height: 100vh;
   height: 100dvh;
   top: 0;
   z-index: 999;
@@ -307,8 +309,7 @@ div.menu-row p {
 
 .carousel-container {
   width: 100%;
-  height: 100vh;
-  height: 100lvh;
+  height: 120vh;
   overflow: hidden;
   position: fixed;
   z-index: -1;
