--- a/src/index.css
+++ b/src/index.css
@@ -309,7 +309,6 @@ div.menu-row p {
 
 .carousel-container {
   width: 100%;
-  height: 120vh;
   overflow: hidden;
   position: fixed;
   z-index: -1;
@@ -336,7 +335,8 @@ div.menu-row p {
 }
 
 .carousel-track img {
-  height: 100svh;
+  height: 100vh;
+  height: 100lvh;
 }
 
 #find-us {
