--- a/src/index.css
+++ b/src/index.css
@@ -223,11 +223,12 @@ a.side-section {
   background-size: cover;
   background-position: center;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .menu-card-title {
   width: 100%;
+  max-width: 700px;
   text-align: center;
 }
 
