--- a/src/index.css
+++ b/src/index.css
@@ -210,6 +210,34 @@ a.side-section {
   padding-bottom: 12px;
 }
 
+#grid-area-1 {
+  grid-area: auto;
+}
+#grid-area-2 {
+  grid-area: auto;
+}
+#grid-area-3 {
+  grid-area: auto;
+}
+#grid-area-4 {
+  grid-area: auto;
+}
+#grid-area-5 {
+  grid-area: auto;
+}
+#grid-area-6 {
+  grid-area: auto;
+}
+#grid-area-7 {
+  grid-area: auto;
+}
+#grid-area-8 {
+  grid-area: auto;
+}
+#grid-area-9 {
+  grid-area: auto;
+}
+
 @media only screen and (min-width: 768px) {
   .menu-cards-container {
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -220,34 +248,33 @@ a.side-section {
     "c c g h"
     "b b i i";
   }
-}
-
-#grid-area-1 {
-  grid-area: a;
-}
-#grid-area-2 {
-  grid-area: b;
-}
-#grid-area-3 {
-  grid-area: c;
-}
-#grid-area-4 {
-  grid-area: d;
-}
-#grid-area-5 {
-  grid-area: e;
-}
-#grid-area-6 {
-  grid-area: f;
-}
-#grid-area-7 {
-  grid-area: g;
-}
-#grid-area-8 {
-  grid-area: h;
-}
-#grid-area-9 {
-  grid-area: i;
+  #grid-area-1 {
+    grid-area: a;
+  }
+  #grid-area-2 {
+    grid-area: b;
+  }
+  #grid-area-3 {
+    grid-area: c;
+  }
+  #grid-area-4 {
+    grid-area: d;
+  }
+  #grid-area-5 {
+    grid-area: e;
+  }
+  #grid-area-6 {
+    grid-area: f;
+  }
+  #grid-area-7 {
+    grid-area: g;
+  }
+  #grid-area-8 {
+    grid-area: h;
+  }
+  #grid-area-9 {
+    grid-area: i;
+  }
 }
 
 .menu-card {
