--- a/src/index.css
+++ b/src/index.css
@@ -301,6 +301,7 @@ a.side-section {
   height: 100vh;
   height: 100dvh;
   top: 0;
+  overscroll-behavior: contain;
   z-index: 999;
   background-color: var(--color-primary);
 }
